--- a/Open Bootcamp/aulas/04 Intro CSS/web_con_css.html
+++ b/Open Bootcamp/aulas/04 Intro CSS/web_con_css.html
@@ -10,7 +10,11 @@
 <body>
     <h1>Custom Style Sheet</h1>
     <p>Un párrafo</p>
-    <h1>Soy otro H1</h1>
-    <p>Hello World</p>
+    <h2 class="encabezado">Soy un H2 - Sección de Noticias</h2>
+    <p id="primera-noticia">Un párrafo</p>
+    <p id="segunda-noticia" =>Otro párrafo</p>
+    <span id="primera-noticia">Primera noticia sin estilos</span>
+    <br>
+    <button class="warning">Peligro!!!</button>
 </body>
 </html>
