--- a/Open Bootcamp/open-bootcamp-ejercicio06/open-bootcamp-ejercicio06.html
+++ b/Open Bootcamp/open-bootcamp-ejercicio06/open-bootcamp-ejercicio06.html
@@ -10,7 +10,8 @@
     <body>
         <section>
             <h1>Selectores, pseudo-clases y pseudo-elementos en CSS</h1>
-            <button class="boton">Pasa por encima</button>
+
+            <a href="https://google.com">Hello</a>
         </section>
     </body>
 </html>
