--- a/Projects/17. Product Landing Page/index.html
+++ b/Projects/17. Product Landing Page/index.html
@@ -1,46 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product Landing Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
     <header id="header">
-    <img id="header-img" src="https://d33wubrfki0l68.cloudfront.net/2f7693e1933ac514c960f51ceae72c91c6716eb2/b2efd/img/fcc_primary_small.svg" alt="Product Logo">
-    <nav id="nav-bar">
-        <a class="nav-link" href="#features">Features</a>
-        <a class="nav-link" href="#video">Video</a>
-        <a class="nav-link" href="#pricing">Pricing</a>
-    </nav>
+        <img id="header-img"
+            src="https://d33wubrfki0l68.cloudfront.net/2f7693e1933ac514c960f51ceae72c91c6716eb2/b2efd/img/fcc_primary_small.svg"
+            alt="Product Logo" />
+        <nav id="nav-bar">
+            <a class="nav-link" href="#features">Features</a>
+            <a class="nav-link" href="#video">Video</a>
+            <a class="nav-link" href="#pricing">Pricing</a>
+        </nav>
     </header>
     <main>
-    <section id="features">
-        <h2>Features</h2>
-        <ul>
-        <li>Feature 1</li>
-        <li>Feature 2</li>
-        <li>Feature 3</li>
-        <li>Feature 4</li>
-        <li>Feature 5</li>
-        </ul>
-    </section>  
-    <section id="video-youtube">
-        <h2>Video</h2>
-        <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/pEfrdAtAmqk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </section>
-    <section id="pricing">
-        <h2>Pricing</h2>
-        <form id="form" action="https://www.freecodecamp.com/email-submit" method="post">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" placeholder="Enter your email address" required>
-        <input type="submit" id="submit" value="Subscribe">
-        </form>
-    </section>
+        <section id="features">
+            <h2>Features</h2>
+            <ul>
+                <li>Feature 1</li>
+                <li>Feature 2</li>
+                <li>Feature 3</li>
+                <li>Feature 4</li>
+                <li>Feature 5</li>
+            </ul>
+        </section>
+        <section id="video-youtube">
+            <h2>Video</h2>
+            <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/pEfrdAtAmqk" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </section>
+        <section id="pricing">
+            <h2>Pricing</h2>
+            <form id="form" action="https://www.freecodecamp.com/email-submit" method="post">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" placeholder="Enter your email address" required />
+                <input type="submit" id="submit" value="Subscribe" />
+            </form>
+        </section>
     </main>
     <footer>
-    <p>&copy; 2021 Product Landing Page</p>
+        <p>&copy; 2021 Product Landing Page</p>
     </footer>
 </body>
+
 </html>
